# template

./: Makefile  README.md  pyproject.toml
src/template/: core.py
