[project]
name = "template"
version = "0.0.1"
authors = [
    { name="Jason Wilkes", email="notarealdeveloper@gmail.com" },
]
description = "Package template for python"
dependencies = [
    "is_instance",
]

[project.urls]
source = "https://github.com/notarealdeveloper/template"
download = "https://pypi.org/project/template/#files"
